--- a/index.html
+++ b/index.html
@@ -1,15 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B13-A01-Knowledge-Vault</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    <h1>hello world</h1>
+    <header>
+        <div class="logo">
+            <img src="./assets/logo-navbar.png" alt="logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">How It Works</a></li>
+                <li><a href="#">Why It's Different</a></li>
+            </ul>
+        </nav>
+        <div class="btn"><a href="#">Get Early Access</a></div>
+    </header>
+    <section id="hero_banner ">
+        <div class="hero">
+            <div class="botn"><a href="#"><i class="fa-solid fa-circle-dot"></i>Early Access Now Open</a></div>
+            <h1>Structured thinking,<br><span>Not just note-taking.</span></h1>
+            <p>A private space to store notes, links, and learning summaries — designed to
+                <br><br>help you think clearly, connect ideas, and turn learning into long-term knowledge.
+            </p>
+            <div class="btnn">
+                <div class=" btn_one"><a href="#">Start Building Your Vault <i
+                            class="fa-solid fa-arrow-right-long"></i></a>
+                </div>
+                <div class="See_btn"> <a href="#"><i class="fa-solid fa-play"></i> See How It Works</a></div>
+            </div>
+        </div>
+
+
+
+
+
+    </section>
+    <section id="notes"></section>
+    <section id="second_brain"></section>
+    <section id="joing_early"></section>
+    <footer></footer>
 </body>
+
 </html>
