--- a/index.html
+++ b/index.html
@@ -50,8 +50,66 @@
 
 
     </section>
-    <section id="notes"></section>
-    <section id="second_brain"></section>
+    <section id="notes">
+        <div class="some_txt">
+            <h1>
+                Notes don't fail, Structure does.</h1>
+            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+        </div>
+        <div id="cards">
+            <div class="cad">
+                <div class="carcle">
+                    <div><img src="./assets/Vector.png" alt="#"></div>
+                </div>
+                <h3>Scattered notes</h3>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="cad">
+                <div class="carcle">
+                    <div><img src="./assets/Bookmarks.png" alt="#"></div>
+                </div>
+                <h3>Bookmark overload</h3>
+                <p>Hundreds of saved links you'll never revisit or remember.</p>
+            </div>
+            <div class="cad">
+                <div class="carcle">
+                    <div><img src="./assets/Brain.png" alt="#"></div>
+                </div>
+                <h3>No idea connections</h3>
+                <p>Insights stay isolated, never building into bigger understanding.</p>
+            </div>
+            <div class="cad">
+                <div class="carcle">
+                    <div><img src="./assets/Info.png" alt="#"></div>
+                </div>
+                <h3>Forgetting what you learned</h3>
+                <p>Knowledge fades because there's no system to retain it.</p>
+            </div>
+        </div>
+    </section>
+    <section id="second_brain">
+        <div class="brain">
+            <div class="img_brain">
+                <img src="./assets/knowledge.png" alt="">
+            </div>
+            <div class="brain_text">
+                <p class="top_p">The Solution</p>
+                <h1>Your second brain, <br>structured by design.</h1>
+                <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every
+                    note, link, and summary becomes part of an interconnected web of understanding.</p>
+                <ul>
+                    <li><img src="./assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one
+                    </li>
+                    <li><img src="./assets/CheckCircle.png" alt="">Connect related concepts automatically as you write
+                    </li>
+                    <li><img src="./assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts
+                    </li>
+                    <li><img src="./assets/CheckCircle.png" alt="">Find anything instantly with semantic search
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <section id="joing_early"></section>
     <footer></footer>
 </body>
