joing section and fotter push

--- a/index.html
+++ b/index.html
@@ -110,8 +110,34 @@
             </div>
         </div>
     </section>
-    <section id="joing_early"></section>
-    <footer></footer>
+    <section id="joing_early">
+        <div class="joing">
+
+            <h1>Ready To Think More Clearly?</h1>
+            <p>Join thousands of learners who are building their personal knowledge vaults. <br> Start free, no credit
+                card required.
+            </p>
+            <div class="btnns">
+                <div class=" btn_two"><a href="#">Get Early Access <i class="fa-solid fa-arrow-right-long"></i></a>
+                </div>
+            </div>
+            <p class="last_p">Free during early access • No credit card needed</p>
+        </div>
+    </section>
+    <footer>
+        <div class="fotters">
+            <div><img src="./assets/logo-footer.png" alt=""></div>
+            <div class="social_links">
+                <p>Social Links</p>
+                <i class="fa-brands fa-x-twitter"></i>
+                <i class="fa-brands fa-linkedin"></i>
+                <i class="fa-brands fa-facebook"></i>
+            </div>
+
+        </div>
+        <div class="p_last">  <p >© 2026 Personal Knowledge Vault. All rights reserved.</p></div>
+
+    </footer>
 </body>
 
 </html>
